# nyc-taxi-predictions-2025

./: README.md  docker-compose.yaml  pyproject.toml
app/api/: Dockerfile  api.py  requirements.txt
app/ui/: Dockerfile  main.py  requirements.txt
notebooks/: intial_tracking.ipynb
