[project]
name = "nyc-taxi-predictions-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
]
